includeはaglioで対応していた

--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "author": "Shingo Yamazaki<shingoyamazaki00@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "aglio": "^2.3.0",
     "browser-sync": "^2.18.2",
     "gulp": "^3.9.1",
-    "gulp-aglio": "0.0.10",
-    "gulp-ejs": "^2.2.1",
-    "gulp-rename": "^1.2.2",
-    "rimraf": "^2.5.4"
+    "gulp-aglio": "0.0.10"
   }
 }
